packages/rspack-test-tools/tests/configCases/errors/hide-stack/loader-emit-hide.js
/** @type {import("@rspack/core").LoaderDefinition} */
module.exports = function () {
	var err = new Error("emit message hide");
	err.stack = "emit stack hide";
	err.hideStack = true;
	this.emitError(err);
	return '';
};
